--- a/Thesis.tex
+++ b/Thesis.tex
@@ -23,6 +23,12 @@
 \usepackage{tabularx}
 \usepackage{arydshln}
 \usepackage{booktabs}
+%\usepackage{multicol}
+\usepackage{multirow}
+
+\usepackage{tikz-3dplot}
+\usetikzlibrary{calc, angles}
+\usepackage{pgfplots}
 
 \usepackage[acronym, nonumberlist, nomain]{glossaries}
 \makeglossaries
