--- a/algorithm.tex
+++ b/algorithm.tex
@@ -127,8 +127,9 @@ After any arbitrary time step the pose samples have to be updated according to t
 
 An illustration can be found at the 2D example in \figRef{fig:2d_noise_sampling}. The initial pose $p_{t-1}$ at time $t-1$ gets updated with the motion $\Delta p$ and the noise drawn from the normal distribution. It is more likely for the final pose $p_t$ to be close to the original motion.
 \begin{figure}[!htp]
-  \todo[inline]{add picture}
-  \caption[2D motion model]{The motion model updates the pose sample $p$ by adding the motion $\Delta p$ and some normal distributed noise (using the identity matrix $I$ as deviations). The resulting pose is more likely in the red area.}
+  \centering
+  \input{pics/2d_motion_model}
+  \caption[2D motion model]{The motion model updates the pose sample $p$ by adding the motion $\Delta p$ and some normal distributed noise (using the identity matrix $I$ as deviations). The sample has a high likelihood to be at the dark red area, though it can be in the outer areas as well.}
   \label{fig:2d_noise_sampling}
 \end{figure}
 %
@@ -176,9 +177,9 @@ The ray tracer used in \gls{AMCL6D} calculates the intersections of rays emanati
 Since the rays are supposed to simulate a camera, they are cast through an image plane. This helps to determine a second point to construct the rays: The image plane will be divided into small cells, depending on the simulated resolution. One ray is cast through each of these cells and for each of them it has to be checked whether it intersects with the map or not. If it does, the intersection point is stored into a point cloud. The ray tracing is illustrated in \figRef{fig:raytrace_scheme}.
 %
 \begin{figure}[!htp]
-  \todo[inline]{add picture}
-  %\includegraphics[width=\columnwidth]{pics/raytrace_scheme}
-  \caption[Ray tracing]{Rays are cast from the robot's position through the image plane.}
+  \centering
+  \input{pics/virtualimageplane}
+  \caption[Ray tracing]{Calculation of the virtual image plane for the ray tracing.}
   \label{fig:raytrace_scheme}
 \end{figure}
 %
@@ -187,8 +188,8 @@ The image plane is calculated with the aperture angles ($\theta$ for the horizon
 \begin{align}
 y_{min} &= F \cdot \tan{-\frac{\theta}{2}} &\label{form:image_plane} \\
 y_{max} &= F \cdot \tan{ \frac{\theta}{2}} &\\
-z_{min} &= F \cdot \tan{-\frac{\phi}{2}} &\\
-z_{max} &= F \cdot \tan{ \frac{\phi}{2}} &
+z_{min} &= F \cdot \tan{-\frac{\phi}{2}}   &\\
+z_{max} &= F \cdot \tan{ \frac{\phi}{2}}   &
 \end{align}
 %
 Thus, the image plane's corners are $c_{bl}=(y_{min}, z_{min}), c_{br}=(y_{max}, z_{min}), c_{tl}=(y_{min}, z_{max}),$ and $c_{tr}=(y_{max}, z_{max})$. The cell size ($w$idth and $h$eight) is calculated with $w=|c_{br}-c_{bl}|/res_{hor}$ and $h=|c_{tl}-c_{bl}|/res_{ver}$, with $res_{hor}$ being the horizontal and $res_{ver}$ the vertical resolution.
@@ -196,12 +197,13 @@ Thus, the image plane's corners are $c_{bl}=(y_{min}, z_{min}), c_{br}=(y_{max},
 However, algorithmically it is not necessary to calculate all these points or individual cells. $y_{min/max}, z_{min/max}$ and the cell size of the image plane's cells, $w$ and $h$, are already enough to iterate over the plane and cast a ray for each cell with \algRef{alg:iterate_imageplane}. The resulting intersections are stored into an array of points which is called point cloud.
 %
 \begin{algorithm}[!htp]
-\caption[Ray tracing]{Iterating the virtual image plane to cast rays through each cell.}
+\caption[Ray tracing]{Iterating the virtual image plane to cast rays through each cell. The transformation is achieved with the inverse of the matrix representing the pose, as described in \formRef{form:affinetransmatrix} and \formRef{form:transformpoint}.}
 \label{alg:iterate_imageplane}
 $y = y_{min}$\;
 $z = z_{min}$\;
 \While{$y \le y_{max}$}{
   \While{$z \le z_{max}$}{
+    transform $(y, z)$ relative to $pose$\;
     cast ray from $pose.position$ through $(y,z)$, store intersection\;
     $z += h$\;
   }
@@ -239,7 +241,7 @@ A = \left(\begin{array}{cccc}
 $A$ is the matrix which describes the transformation needed from the global origin to the pose. By taking the inverse $A^{-1}$ it is possible to calculate a matrix which describes the opposite: the transformation from the pose back to the origin. This inverted matrix $A^{-1}$ can be applied to each point $p$ in the point cloud result ($\mathbb{P}$) from the ray trace to transform them to positions which are relative to the origin as they were to the pose. Note that the points need to be homogenous, that means they need to be extended with a fourth component which is $1$.
 %
 \begin{align}
-  \forall p \in \mathbb{P}: \genfrac{(}{)}{0pt}{0}{p}{1} = A^{-1} \genfrac{(}{)}{0pt}{0}{p}{1}
+  \forall p \in \mathbb{P}: \genfrac{(}{)}{0pt}{0}{p}{1} = A^{-1} \genfrac{(}{)}{0pt}{0}{p}{1}\label{form:transformpoint}
 \end{align}
 %
 The resulting point cloud can be used to evaluate the corresponding sample in the evaluation function.
