--- a/Thesis.tex
+++ b/Thesis.tex
@@ -29,6 +29,7 @@
 \usepackage{tikz-3dplot}
 \usetikzlibrary{calc, angles}
 \usepackage{pgfplots}
+\usepgfplotslibrary{fillbetween}
 
 \usepackage[acronym, nonumberlist, nomain]{glossaries}
 \makeglossaries
@@ -48,7 +49,6 @@
 \def\pageRef#1{Page~\pageref{#1}}
 \def\chapRef#1{Chapter~\ref{#1}}
 \def\secRef#1{Section~\ref{#1}}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
