--- a/setup.tex
+++ b/setup.tex
@@ -17,8 +17,7 @@ The ray tracing, as described in \chapRef{sec:raytrace}, is implemented as a \gl
 For the preprocessing of the maps the \gls{lvr} is employed. The maps are polygon meshes created from points clouds and optimized with the \gls{lvr} as described in\cite{Wiemann:2013}.
 
 \begin{figure}%
-%\includegraphics[width=\columnwidth]{filename}%
-\todo[inline]{poly map}
+\includegraphics[width=\columnwidth]{pics/officemap}
 \caption[Example polygon mesh]{An example polygon mesh of an office corridor at the Institute of Computer Science.}%
 \label{fig:examplemap}%
 \end{figure}
