--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -76,7 +76,7 @@
 @article{flann_pami_2014,
   title     = {Scalable Nearest Neighbor Algorithms for High Dimensional Data},
   author    = {Marius Muja and David G. Lowe},
-  journal   = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
   volume    = {36},
   year      = {2014},
   publisher = {IEEE}
