--- a/abstract.tex
+++ b/abstract.tex
@@ -3,7 +3,7 @@
 
 Robot localization in known environments is an important topic, especially in the field of mobile robotics. Whenever a robot is turned on or relocated, it has to (re)locate itself in its environment. Several approaches exist for robots to find their three-dimensional pose in two dimensional raster maps. A popular algorithm for the localization task is the \gls{AMCL} which is described in details by Thrun et. al.\cite{ThrunBurgardFox:2005}. A localization is successful when the robot found its current three dimensional pose, that is its two dimensional position and its one dimensional orientation.
 
-Mobile robots have to work not only in two, but also in three dimensional environments. This means they can have six dimensional poses because their position consists of three dimensions and so does their orientation. In this thesis I will derive an algorithm based on \gls{AMCL} to solve the localization problem in such three dimensional environments and finding the six dimensional pose. Therefor I will no longer use raster maps but polygon meshes as continuous maps. For the sensor model I will use a ray tracer, which simulates sensor data comparable to real world distance sensors like laser scanners or depth cameras.
+Mobile robots have to work not only in two, but also in three dimensional environments. This means they can have six dimensional poses because their position consists of three dimensions and so does their orientation. In this thesis I will derive an algorithm based on \gls{AMCL} to solve the localization problem in such three dimensional environments and find the six dimensional pose. Therefor I will no longer use raster maps but polygon meshes as continuous maps. For the sensor model I will use a ray tracer, which simulates sensor data comparable to real world distance sensors like laser scanners or depth cameras.
 
 After deriving the algorithm and running some simulations with it, I will take a look out about how the algorithm can be developed further.
 %
