--- a/evaluation.tex
+++ b/evaluation.tex
@@ -123,7 +123,7 @@ The mean results are illustrated in \figRef{fig:resresults}. As one can see, all
 \section{Ray tracing speed}\label{sec:rtspeed}
 The algorithm performed very slow on the medium and high resolutions. While following the assumption that the ray tracer might be a bottleneck, the computation time of the ray tracer was tracked to find out its portion of time used during execution of the algorithm.
 The results show that the ray tracer consumes most of the algorithm's running time, with rates varying between 93 and 96 percent. An improved ray tracer might therefor speed up the calculations enormously.
-It can also be seen in \tableRef{tab:rtspeedrestable}, that smaller numbers of vertices and faces improve the time needed for the ray tracing. Using the mesh optimization software of the \gls{lvr} can thus lead to better results.
+It can also be seen in \tableRef{tab:rtspeedrestable} that therefore smaller numbers of vertices and faces improve the time needed for the ray tracing. Using the mesh optimization software of the \gls{lvr} can thus lead to better results.
 
 \begin{table}[h]
 \begin{center}\footnotesize
