--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@
 
 Let's assume for a second you get kidnapped: Some dark clothed men blindfold you, drag you into their car and drive around in confusing circles before they release you at a completely different place. Luckily you get your hand on a hand radio and when the bad guys leave you to die, you are able to tell your friend (luckily a ham radio operator) where you are, so that she can pick you up: You look around and tell her what you see. The big tree over there, the coffee shop at that corner. Your friend finds several similar locations on her map, so she asks you to go a few more steps and tell her what you see. After telling her about the bakery next to the coffee shop and a small park across the street she is finally able to locate you, jumps into the car and fetches you.
 
-This scenario is quite common for mobile robots. In the annual RoboCup, a scientific competition in which robots play football\cite{robocup}, robots are often relocated by a referee\cite{ThrunBurgardFox:2005}. They then have to realize that they have been relocated and determine their new position to continue efficient play. If there are ambiguous possible positions, they can simply move to get rid uncertainties, as described in the example above.
+This scenario is quite common for mobile robots. In the annual RoboCup, a scientific competition in which robots play football\cite{robocup}, robots are often relocated by a referee\cite{ThrunBurgardFox:2005}. They then have to realize that they have been relocated and determine their new position to continue efficient play. If there are ambiguous possible positions, they can simply move to get rid of uncertainties, as described in the example above.
 
 A similar situation occurs for every mobile robot which is turned on. If they are supposed to drive around a factory (or a floor in the computer science department) they first have to find out where they are. This is a little bit easier than the first scenario, since a robot doesn't have to find out that it was relocated---it is sufficient to find the current position.
 
