--- a/setup.tex
+++ b/setup.tex
@@ -1,7 +1,7 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
 \chapter{Software, tools and project setup}
-For the implementation of the algorithm presented in this thesis, several tools were needed. A complete list of tools and where to get them can be found in the appendix.
+For the implementation of the algorithm presented in this thesis several tools were needed. A complete list of tools and where to get them can be found in the appendix.
 
 \smallskip
 
