--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -15,10 +15,10 @@ Depending on the different characteristics of localization problems there are di
 One popular approach to solve localization problems are particle filters. Instead of representing \glspl{pdf} as continuous functions as it was done in the 1D example in \secRef{sec:doorex}, a particle filter represents a distribution by a set of samples drawn from it. This allows to represent more distributions than continuous models do\cite{ThrunBurgardFox:2005}. 
 The probability of a sample to be drawn is determined by the underlying distribution. Thus a set of samples is just a discrete approximation of the real distribution.
 
-Particle filters are basically an extension to Bayes filters. Each sample has a belief of how likely it is, that it can be drawn from the distribution. A particle filter uses the beliefs of each sample from the last time step as priors to calculate their posterior beliefs of the current time step. Being filters, these algorithms discard samples with low beliefs and replace them with new random samples after each iteration\cite{ThrunBurgardFox:2005}. This way the samples are kept which are the best approximation of the distribution.
+Particle filters are basically an extension to Bayes filters. Each sample has a belief of how likely it is that it can be drawn from the distribution. A particle filter uses the beliefs of each sample from the last time step as priors to calculate their posterior beliefs of the current time step. Being filters, these algorithms discard samples with low beliefs and replace them with new random samples after each iteration\cite{ThrunBurgardFox:2005}. This way the samples are kept which are the best approximation of the distribution.
 
 \section{Augmented Monte Carlo Localization}
-As shown in \figRef{fig:markov_localization_one_dimension}, the pose of a mobile robot can be described by a \gls{pdf}. By using the ability of a particle filter to approximate distributions it is possible to approximate the robot's pose, hence locate the robot. In this case the particle filters implement a motion model to change the samples according to the measured robot motion and a sensor model to provide a simulation of the sensor data, i.e. to determine what sensor data each sample would expect. By comparing each sample's simulated sensor data from the sensor model with the real sensor data it is possible to come up with a likelihood for each sample. After calculating the posterior beliefs for each sample the unlikeliest are replaced by new random samples. These kind of algorithms are called \glspl{MCL}.
+As shown in \figRef{fig:markov_localization_one_dimension}, the pose of a mobile robot can be described by a \gls{pdf}. By using the ability of a particle filter to approximate distributions it is possible to approximate the robot's pose, hence locate the robot. In this case the particle filters implement a motion model to change the samples according to the measured robot motion and a sensor model to provide a simulation of the sensor data, i.e. to determine what sensor data each sample would expect. By comparing each sample's simulated sensor data from the sensor model with the real sensor data it is possible to come up with a likelihood for each sample. After calculating the posterior beliefs for each sample, the unlikeliest are replaced by new random samples. These kind of algorithms are called \glspl{MCL}.
 
 \begin{algorithm}
 \SetKwProg{mcl}{Monte\mathunderscore Carlo\mathunderscore Localization}{}{end}
