--- a/future.tex
+++ b/future.tex
@@ -16,7 +16,7 @@ Another very important factor is the evaluation function. As in other applicatio
 
 \subsection*{Multiple sensors}
 
-If all these changes are done and \gls{AMCL6D} turns out to work, there are still many things to do. First of course it should be tested on a real robot and not only in simulations. After that it is possible to extend \gls{AMCL6D} further, for example by adding a second sensor which is directed to another direction than the first. This could help to reduce ambiguities and thus lead to faster convergence, but also introduces more data to process. This leads to the problem that sometimes better sensors are difficult to handle due to their different kind of data\cite{Smithers:1994}---or in this case more because of the amount of data.
+If all these changes are done and \gls{AMCL6D} turns out to work, there are still many things to do. First of course, it should be tested on a real robot and not only in simulations. After that it is possible to extend \gls{AMCL6D} further, for example by adding a second sensor which is directed to another direction than the first. This could help to reduce ambiguities and thus lead to faster convergence, but also introduces more data to process. This leads to the problem that sometimes better sensors are difficult to handle due to their different kind of data\cite{Smithers:1994}---or in this case more because of the amount of data.
 
 \section*{Conclusion}
 
